--- a/kits/payroll/package.json
+++ b/kits/payroll/package.json
@@ -13,15 +13,15 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "eth-ens-namehash": "^2.0.8",
-    "truffle": "4.0.5",
+    "truffle": "4.1.14",
     "truffle-hdwallet-provider": "0.0.3"
   },
   "dependencies": {
-    "@aragon/apps-finance": "^1.0.0",
-    "@aragon/apps-vault": "^2.0.1",
-    "@aragon/future-apps-payroll": "^0.0.1",
+    "@aragon/apps-finance": "^2.0.0-beta.2",
+    "@aragon/apps-vault": "^3.0.0-beta.2",
+    "@aragon/future-apps-payroll": "^0.1.0",
     "@aragon/kits-bare": "^1.0.0",
     "@aragon/ppf-contracts": "^1.0.2",
-    "@aragon/os": "^3.1.9"
+    "@aragon/os": "^4.0.0-beta.3"
   }
 }
