--- a/kits/payroll-demo/package.json
+++ b/kits/payroll-demo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@aragon/kits-payroll",
+  "name": "@aragon/kits-payroll-demo",
   "version": "1.0.0",
-  "description": "Kit for setting up a DAO to do Payroll",
+  "description": "Demo kit for setting up a DAO to do Payroll",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -17,11 +17,15 @@
     "truffle-hdwallet-provider": "0.0.3"
   },
   "dependencies": {
+    "@aragon/kits-bare": "1.0.0",
+    "@aragon/kits-payroll": "1.0.0",
+    "@aragon/apps-shared-minime": "^1.0.0",
     "@aragon/apps-finance": "^2.0.0-beta.2",
     "@aragon/apps-vault": "^3.0.0-beta.2",
     "@aragon/future-apps-payroll": "0.1.0",
-    "@aragon/kits-bare": "1.0.0",
+    "@aragon/test-helpers": "^1.0.1",
     "@aragon/ppf-contracts": "^1.0.2",
+    "@aragon/ppf.js": "1.0.1",
     "@aragon/os": "^4.0.0-beta.3"
   }
 }
